selfhost/test/parser/lambdas_error_statement_body.out
Error at %FILE_NAME%:1:7
Unexpected token 'val':
  |  () => val a = 3
           ^